--- a/front-end/index.html
+++ b/front-end/index.html
@@ -16,18 +16,18 @@
 <body>
   <div class="">
     <nav class="white z-depth-0" role="navigation">
-        <div class="row">
-            <div class="col s12 m3 center">
-                <a id="logo-container" class="brand-logo" href="index.html">ECOMMERCE</a>
-            </div>
-            <div class="col s12 m6 push-custom">
-                <ul class="hide-on-med-and-down nav-ul">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="categories.html">Kids</a></li>
-                    <li><a href="categories.html">Women's</a></li>
-                    <li><a href="categories.html">Men's</a></li>
-                    <!-- dropdown -->
-                    <!-- <li id="dropdown"><a href="#">Categories &#9662;</a>
+      <div class="row">
+        <div class="col s12 m3 center">
+          <a id="logo-container" class="brand-logo" href="index.html">ECOMMERCE</a>
+        </div>
+        <div class="col s12 m6 push-custom">
+          <ul class="hide-on-med-and-down nav-ul">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="categories.html">Kid's</a></li>
+            <li><a href="categories.html">Women's</a></li>
+            <li><a href="categories.html">Men's</a></li>
+            <!-- dropdown -->
+            <!-- <li id="dropdown"><a href="#">Categories &#9662;</a>
                         <ul class="dropdown">
                             <li><a href="categories.html">Kids &#9656;</a></li>
                             <li><a href="categories.html">Women's &#9656;</a></li>
@@ -35,46 +35,45 @@
                         </ul>
                     </li> -->
 
-                </ul>
-            </div>
-
-            <div class="col s12 m3">
-                <ul class="hide-on-med-and-down nav-ul">
-                    <li><a href="contact.html">Contact</a></li>
-                    <li><a href="login.html">Login</a></li>
-                    <li id="nav_cart"><a href="#"> <i class="material-icons-outlined">shopping_cart</i>
-                        </a></li>
-                </ul>
-
-            </div>
-
-            <!-- MOBILE MENU -->
-            <ul id="nav-mobile" class="sidenav">
-                <li><a href="index.html">Home</a></li>
-                <li>
-                    <div class="divider"></div>
-                </li>
-                <li><a class="subheader">Categories</a></li>
-                <ul>
-                    <li><a href="categories.html">Kids</a></li>
-                    <li><a href="categories.html">Women's</a></li>
-                    <li><a href="categories.html">Men's</a></li>
-                </ul>
-                </li>
-                <li>
-                    <div class="divider"></div>
-                </li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="#">Cart</a></li>
-                <li><a href="login.html">Login</a></li>
-            </ul>
-            <a href="#" data-target="nav-mobile" class="left sidenav-trigger"><i class="material-icons">menu</i></a>
-            <a href="cart.html" class="right sidenav-trigger"><i
-                    class="material-icons-outlined">shopping_cart</i></a>
+          </ul>
         </div>
+
+        <div class="col s12 m3">
+          <ul class="hide-on-med-and-down nav-ul">
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="login.html">Login</a></li>
+            <li id="nav_cart"><a href="#"> <i class="material-icons-outlined">shopping_cart</i>
+              </a></li>
+          </ul>
+
+        </div>
+
+        <!-- MOBILE MENU -->
+        <ul id="nav-mobile" class="sidenav">
+          <li><a href="index.html">Home</a></li>
+          <li>
+            <div class="divider"></div>
+          </li>
+          <li><a class="subheader">Categories</a></li>
+          <ul>
+            <li><a href="categories.html">Kids</a></li>
+            <li><a href="categories.html">Women's</a></li>
+            <li><a href="categories.html">Men's</a></li>
+          </ul>
+          </li>
+          <li>
+            <div class="divider"></div>
+          </li>
+          <li><a href="contact.html">Contact</a></li>
+          <li><a href="#">Cart</a></li>
+          <li><a href="login.html">Login</a></li>
+        </ul>
+        <a href="#" data-target="nav-mobile" class="left sidenav-trigger"><i class="material-icons">menu</i></a>
+        <a href="cart.html" class="right sidenav-trigger"><i class="material-icons-outlined">shopping_cart</i></a>
+      </div>
     </nav>
 
-</div>
+  </div>
 
 
   <!-- SLIDER -->
@@ -479,36 +478,46 @@
   </div>
 
 
-  <div class="parallax-container valign-wrapper">
-    <div class="section no-pad-bot">
-      <div class="container">
-        <div class="row center breadcrumb_wrapper">
-          <h5 class="header col s12 light">Some of the latest trends in town</h5>
-        </div>
-      </div>
-    </div>
-    <div class="parallax"><img src="media/parallax/1.jpg" alt="Unsplashed background img 3"></div>
-  </div>
+
+  <section>
+    <svg id="curve" data-name="layer" viewBox="0 0 1416.9 174.01">
+      <path d="M0,220.8S283.66,120,608.94,163.56s437.93,100.57,818,10.34V309.54H0V280.8Z"
+        transform="translate(0 -120.53)" />
+
+    </svg>
+  </section>
 
   <footer class="page-footer">
     <div class="container">
       <div class="row">
-        <div class="col l6 s12">
-          <h5>ECOMMERCE</h5>
-          <p class="grey-text text-lighten-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
-            scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna fermentum ac.</p>
+        <div class="col s12 m4">
+          <div class="card footer_card z-depth-0">
+            <div class="card-content white-text">
+              <span class="card-title">T&C</span>
+              <p>I am a very simple card. I am good at containing small bits of information.
+                I am convenient because I require little markup to use effectively.</p>
+            </div>
+          </div>
         </div>
-        <div class="col l3 s12">
+        <div class="col s12 m4">
+          <div class="card footer_card z-depth-0">
+            <div class="card-content white-text">
+              <span class="card-title">Contact Details</span>
+              <p>I am a very simple card. I am good at containing small bits of information.
+                I am convenient because I require little markup to use effectively.</p>
+            </div>
+          </div>
         </div>
-        <div class="col l3 s12">
-          <h5 class="white-text">Quick Links</h5>
-          <ul class="quick-links">
-            <li><a class="white-text" href="index.html">HOME</a></li>
-            <li><a class="white-text" href="categories.html">CATEGORIES</a></li>
-            <li><a class="white-text" href="contact.html">CONTACT</a></li>
-            <li><a class="white-text" href="login.html">LOGIN</a></li>
-          </ul>
+        <div class="col s12 m4">
+          <div class="card footer_card z-depth-0">
+            <div class="card-content white-text">
+              <span class="card-title">Quick Links</span>
+              <p>I am a very simple card. I am good at containing small bits of information.
+                I am convenient because I require little markup to use effectively.</p>
+            </div>
+          </div>
         </div>
+
       </div>
     </div>
     <div class="footer-copyright">
